--- a/src/app/testimonials.css
+++ b/src/app/testimonials.css
@@ -5,6 +5,8 @@
   padding: 4rem 1rem;
   margin: 0 auto;
   width: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
   max-width: 1440px;
   box-sizing: border-box;
   position: relative;
